# voiceagent

./: .SRCINFO  .gitignore  AGENTS.md  PKGBUILD  README.md  TODO.md  pyproject.toml  voiceagent-buildtest  voiceagent-compiletest
packaging/: PKGBUILD.aur  vendor-requirements.txt  voiceagent-launcher  voiceagent.desktop
src/voiceagent/: __init__.py  __main__.py  app.py  audio_check.py  audio_visualizer.py  backends.py  config.py  controller.py  downloaders.py  logging_utils.py  model_loader.py  models.py  paths.py  replay_widgets.py  tts_loader.py  window.py
src/voiceagent/qml/: MainWindow.qml  WaveformMeter.qml
src/voiceagent/services/: __init__.py  audio.py  chat.py  playback.py  stt.py  tts.py
