[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceagent"
version = "0.2.0"
description = "Push-to-talk KDE-friendly desktop voice assistant"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["desktop", "kde", "speech", "stt", "tts", "voice"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "PySide6>=6.10,<6.11",
  "sounddevice>=0.5,<0.6",
  "faster-whisper>=1.2,<2",
  "huggingface_hub>=0.34,<1",
  "piper-tts>=1.4,<2",
]

[project.scripts]
voiceagent = "voiceagent.__main__:main"

[project.urls]
Repository = "https://github.com/pizzimenti/voiceagent"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voiceagent = ["qml/*.qml"]
